Prepare application for production with OpenAPI, Actuator, Docker, and Cloud Run deploy